# workshop-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: project-macros.cmake  supercell-sdk-macros.cmake
scripts/: generate_android_studio_ninja_project.bat  generate_visual_studio_solution.bat
supercell-core/: CMakeLists.txt
supercell-core/cmake/: flatbuffers.cmake
supercell-core/source/core/console/: console.h
supercell-core/source/core/crypto/: base64.h  md5.h
supercell-core/source/core/exception/: exception.h
supercell-core/source/core/image/: compressed_image.h  image.h  raw_image.h
supercell-core/source/core/io/: buffer_stream.h  file_stream.h  memory_stream.h  stream.h
supercell-core/source/core/math/: color_rgb.h  color_rgba.h  matrix2d.h  matrix3d.h  point.h  rect.h  vector3d.h  vector4d.h
supercell-core/source/core/preprocessor/: api.h
supercell-core/source/core/stb/: stb.h
supercell-core/source/core/time/: timer.h
workshop-core/: CMakeLists.txt
workshop-core/cmake/: WkArgsparse.cmake  WkBin2h.cmake  WkBlake.cmake  WkFlatbuffers.cmake  WkJson.cmake  WkLocale.cmake  WkOpenCL.cmake  WkXxHash.cmake  json.cmake  wk_argparse.cmake  wk_flatbuffers.cmake  wk_json.cmake
workshop-core/cmake/scripts/: flatbuffer_generate.cmake  opencl_generate.cmake
workshop-core/source/core/algorithm/: find.hpp  sort.hpp
workshop-core/source/core/asset_manager/: asset_manager.cpp  asset_manager.h  filesystem_asset_manager.cpp  filesystem_asset_manager.h
workshop-core/source/core/console/: console.h
workshop-core/source/core/crypto/: base64.cpp  base64.h  fnv.cpp  fnv.h
workshop-core/source/core/encoding/: base64.cpp  base64.h
workshop-core/source/core/exception/: exception.cpp  exception.h
workshop-core/source/core/generic/: namespace.h  static.h
workshop-core/source/core/geometry/: convex.hpp  intersect.hpp  math.hpp
workshop-core/source/core/hashing/: hash.h  hash_stream.h  hashing.h
workshop-core/source/core/hashing/crypto/: blake.cpp  blake.h  md5.cpp  md5.h
workshop-core/source/core/hashing/ncrypto/: fnv.cpp  fnv.h  xxhash.cpp  xxhash.h
workshop-core/source/core/image/: image.cpp  image.h  raw_image.cpp  raw_image.h
workshop-core/source/core/io/: base_memory_stream.cpp  base_memory_stream.h  buffer_stream.cpp  buffer_stream.h  endian.h  file_stream.cpp  file_stream.h  memory_stream.cpp  memory_stream.h  shared_memory_stream.cpp  shared_memory_stream.h  stream.cpp  stream.h
workshop-core/source/core/math/: color_rgb.h  color_rgba.h  line.h  matrix2d.h  matrix3d.h  point.h  rect.h  triangle.h  vector3d.h  vector4d.h
workshop-core/source/core/memory/: memory.h  memory_pool.h  ref.h
workshop-core/source/core/parallel/: enumerate.h  thread_pool.cpp  thread_pool.h
workshop-core/source/core/parallel/cl/: cl.cpp  cl.h  clProgram.cpp  clProgram.h
workshop-core/source/core/platform/: platform_info.h
workshop-core/source/core/preprocessor/: api.h
workshop-core/source/core/stb/: stb.cpp  stb.h
workshop-core/source/core/string/: string_converter.cpp  string_converter.h
workshop-core/source/core/time/: timer.h
